--- a/app/src/main/res/drawable/circle_button.xml
+++ b/app/src/main/res/drawable/circle_button.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid android:color="@color/circle_button_bg" />
-    <stroke android:width="1dp" android:color="@color/doraemon_light_blue" />
+    <stroke android:width="1dp" android:color="@color/light_blue" />
 </shape>
