--- a/app/src/main/res/drawable/ripple_round.xml
+++ b/app/src/main/res/drawable/ripple_round.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/ripple_color">
+    android:color="?attr/colorControlHighlight">
+
+    <!-- Nền gốc -->
+    <item android:id="@android:id/mask">
+        <shape android:shape="oval">
+            <solid android:color="#22000000" /> <!-- Hiệu ứng ripple xám nhạt -->
+        </shape>
+    </item>
+
     <item>
         <shape android:shape="oval">
             <solid android:color="@android:color/transparent" />
