--- a/app/src/main/res/layout/activity_chatbot.xml
+++ b/app/src/main/res/layout/activity_chatbot.xml
@@ -123,6 +123,19 @@
             android:clickable="true"
             android:focusable="true" />
 
+        <ImageView
+            android:id="@+id/btnImage"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_image"
+            android:background="@drawable/ripple_round"
+            android:padding="8dp"
+            android:layout_marginEnd="8dp"
+            android:contentDescription="Chọn ảnh"
+            android:clickable="true"
+            android:focusable="true" />
+
+
         <!-- Message Input -->
         <LinearLayout
             android:layout_width="0dp"
