--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,8 +6,8 @@
         android:title="@string/home" />
     <item
         android:id="@+id/nav_library"
-        android:icon="@drawable/ic_library"
-        android:title="@string/library" />
+        android:icon="@drawable/ic_chatbot"
+        android:title="Chatbot" />
     <item
         android:id="@+id/nav_search"
         android:icon="@drawable/ic_search"
