--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -23,7 +23,6 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/avatar_border"
             android:padding="3dp">
 
             <ImageView
@@ -46,7 +45,7 @@
                 android:id="@+id/nameTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="AI Assistant"
+                android:text="Nhân viên tư vấn"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold"
