--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -193,4 +193,42 @@
     <color name="on_surface">#1C1B1F</color>
     <color name="ripple_mask_color">#33000000</color> <!-- lớp mask nhẹ -->
 
+    <!-- Instagram Colors -->
+    <color name="instagram_white">#FFFFFF</color>
+    <color name="instagram_black">#262626</color>
+    <color name="instagram_gray">#8E8E8E</color>
+    <color name="instagram_light_gray">#DBDBDB</color>
+    <color name="instagram_background">#FAFAFA</color>
+    <color name="instagram_blue">#0095F6</color>
+    <color name="instagram_red">#ED4956</color>
+    <color name="instagram_green">#4CAF50</color>
+
+    <!-- Gradient Colors -->
+    <color name="gradient_pink">#E91E63</color>
+    <color name="gradient_purple">#9C27B0</color>
+    <color name="gradient_orange">#FF9800</color>
+    <color name="gradient_yellow">#FFEB3B</color>
+
+    <!-- Instagram Theme Colors -->
+    <color name="instagram_dark_blue">#00376B</color>
+
+    <!-- Modern UI Colors -->
+    <color name="card_shadow">#1A000000</color>
+    <color name="search_background">#F6F6F6</color>
+    <color name="online_indicator">#44C85A</color>
+    <color name="typing_indicator">#FF9500</color>
+
+    <!-- Gradient Colors -->
+    <color name="gradient_middle">#5851DB</color>
+
+    <!-- Tab Colors -->
+    <color name="tab_selected">#0095F6</color>
+    <color name="tab_unselected">#8E8E8E</color>
+    <color name="tab_selected_bg">#E3F2FD</color>
+    <color name="tab_unselected_bg">#F6F6F6</color>
+
+    <!-- Transparent Colors -->
+    <color name="black_overlay_10">#1A000000</color>
+    <color name="black_overlay_20">#33000000</color>
+    <color name="white_overlay_90">#E6FFFFFF</color>
 </resources>
